--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,8 +27,10 @@ jobs:
         uses: pypa/cibuildwheel@v3.3.1
         env:
           CIBW_SKIP: "pp* *-musllinux_*"
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
-          CIBW_ARCHS_LINUX: "x86_64 aarch64"
+          CIBW_ARCHS_MACOS: "arm64"
+          CIBW_ARCHS_LINUX: "x86_64"
+          CIBW_BEFORE_ALL_LINUX: "yum install -y autoconf automake libtool alsa-lib-devel && ./scripts/setup.sh"
+          CIBW_BEFORE_ALL_MACOS: "brew install autoconf automake libtool && ./scripts/setup.sh"
 
       - uses: actions/upload-artifact@v4
         with:
