--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
           CIBW_SKIP: "pp* *-musllinux_*"
           CIBW_ARCHS_MACOS: "arm64"
           CIBW_ARCHS_LINUX: "x86_64"
-          CIBW_BEFORE_ALL_LINUX: "yum install -y autoconf automake libtool alsa-lib-devel && ./scripts/setup.sh"
-          CIBW_BEFORE_ALL_MACOS: "brew install autoconf automake libtool && ./scripts/setup.sh"
+          CIBW_BEFORE_ALL_LINUX: "yum install -y autoconf automake libtool alsa-lib-devel"
+          CIBW_BEFORE_ALL_MACOS: "brew install autoconf automake libtool"
 
       - uses: actions/upload-artifact@v4
         with:
