--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ requires = ["scikit-build-core", "cython"]
 build-backend = "scikit_build_core.build"
 
 [tool.scikit-build]
+build-dir = "build/{wheel_tag}"
 wheel.packages = ["src/cypd"]
 wheel.license-files = ["LICENSE"]
 wheel.exclude = ["*.pxd", "*.pyx"]
